<resources>
    <string name="app_name">Application with films</string>
    <string name="MoovieBoy">BoyValue</string>
    <string name="MoovieGirl">Moovy Girl</string>
    <string name="Details">Детали</string>
    <string name="textGirl">Фильм о девочке</string>
    <string name="textBoy">Фильм о мальчике</string>
    <string name="Back">Главная</string>
    <string name="Test">Пробная</string>
    <string name="textBoyBig">Фильм о хорошем мальчике</string>
    <string name="textGirlBig">Фильм о прекрасной девочке</string>
    <string name="Invite">Приглашение СМС</string>
    <string name="love">love</string>
    <string name="Comment">Comments</string>
    <string name="textCar">Фильм о машине</string>
    <string name="textCarBig">Фильм о любимой машине</string>
    <string name="textExit">Вы действительно хотите выйти?</string>
</resources>
