<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewCar"
        android:layout_width="137dp"
        android:layout_height="121dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/MoovieGirl"
        android:src="@drawable/car"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textViewCar"
        style="@style/caption_film"
        android:text="@string/textCarBig"
        android:textAppearance="@style/caption_film_normal" />

    <Button
        android:id="@+id/buttonBack"
        style="@style/button_film"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="openMainActivity"
        android:text="@string/Back" />

    <Button
        android:id="@+id/buttonInviteBySms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="buttonInviteCarBySmsOnClick"
        android:text="@string/Invite" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/love" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Comment" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

</LinearLayout>