<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MoovyBoyActivity">

    <ImageView
        android:id="@+id/imageViewBoy"
        android:layout_width="137dp"
        android:layout_height="121dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/MoovieBoy"
        android:src="@drawable/boy"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewBoy"
        style="@style/caption_film"
        android:text="@string/textBoyBig"
        android:textAppearance="@style/caption_film_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="openMainActivity"
        android:text="@string/Back"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/buttonInviteBySms"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="buttonInviteBoyBySmsOnClick"
        android:text="@string/Invite"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_emoji_people_24px" />

</LinearLayout>