<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".MoovyGirlActivity">

    <ImageView
        android:id="@+id/imageViewGirl"
        android:layout_width="137dp"
        android:layout_height="121dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorBlue"
        android:contentDescription="@string/MoovieGirl"
        android:src="@drawable/moovy_girl"
        android:layout_gravity="center_horizontal"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGirl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textGirlBig"
        android:textColor="@color/colorNoPress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_horizontal"
        app:layout_constraintVertical_bias="0.732" />

    <Button
    android:id="@+id/buttonBack"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="10dp"
    android:text="@string/Back"
    android:onClick="openMainActivity"
    app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonInviteBySms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/Invite"
        android:onClick="buttonInviteGirlBySmsOnClick"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="Нравится" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Комментарии" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

</LinearLayout>